--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,15 @@
 asgiref==3.4.1
 certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.10
-cryptography==36.0.1
-defusedxml==0.7.1
-dj-database-url==0.5.0
+distlib==0.3.4
 Django==4.0.1
-django-heroku==0.3.1
-ecdsa==0.17.0
-gunicorn==20.1.0
-idna==3.3
-oauthlib==3.1.1
-psycopg2==2.9.3
-pyasn1==0.4.8
-pycparser==2.21
-PyJWT==2.3.0
-python-dotenv==0.19.2
-python-jose==3.3.0
-python3-openid==3.2.0
-requests==2.27.1
-requests-oauthlib==1.3.0
-rsa==4.8
+filelock==3.4.2
+install==1.3.5
+pipenv==2022.1.8
+platformdirs==2.4.1
 six==1.16.0
-social-auth-app-django==5.0.0
-social-auth-core==4.1.0
 sqlparse==0.4.2
 tzdata==2021.5
-urllib3==1.26.8
-whitenoise==5.3.0
+virtualenv==20.13.0
+virtualenv-clone==0.5.7
+virtualenvwrapper-win==1.2.7
+xmltodict==0.12.0
